fixed issue with react-text-truncate

--- a/src/styles/Nav.scss
+++ b/src/styles/Nav.scss
@@ -13,6 +13,7 @@
   & h2 {
     cursor: pointer;
     margin: 0 30px;
+    font-size: 15px;
     font-weight: 500;
     opacity: 0.7;
     transition: all 0.05s ease-in-out;
