--- a/src/styles/VideoCard.scss
+++ b/src/styles/VideoCard.scss
@@ -1,7 +1,7 @@
 .videoCard {
   color: white;
-  width: 500px;
-  height: 400px;
+  width: 400px;
+  height: 360px;
   padding: 20px;
   transition: all 0.1s;
 
@@ -10,9 +10,9 @@
   }
 
   & img {
-    height: 300px;
+    height: 240px;
     object-fit: contain;
-    width: 500px;
+    width: 400px;
   }
 
   & h2 {
@@ -21,6 +21,16 @@
 
   &__stats {
     display: none;
+
+    &-appear {
+      display: flex;
+      justify-content: space-between;
+
+      &-likes {
+        display: flex;
+        align-items: center;
+      }
+    }
   }
 
   &:hover > .videoCard__stats {
